--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-.idea
-typings/**
+.vscode
 node_modules
 client/node_modules
-jspm_packages
-link-checker-results.txt
-**/*npm-debug.log.*
-*.js
-*.js.map
-e2e/**/*.js
-e2e/**/*.js.map
-_test-output
-_temp
-
-!karma*.js
-!protractor*.js
-!systemjs.config.js
-!typings/typings.d.ts
-!wallaby.js
